Fixed minor display issue
Some pop-ups were overflowing.

--- a/css/user-sidebar.css
+++ b/css/user-sidebar.css
@@ -107,3 +107,7 @@
     display: table-cell;
     width: 100%;
 }
+
+.leaflet-popup-content{
+	width: auto!important;
+}
